<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tuannguyen.text1.InformationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnHouse1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorChoise"
            android:background="@color/colorPrimary"
            android:text="@string/House1"/>
        <Button
            android:id="@+id/btnHouse2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorChoise"
            android:background="@color/colorPrimary"
            android:text="@string/House2"/>
        <Button
            android:id="@+id/btnHouse3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorChoise"
            android:background="@color/colorPrimary"
            android:text="@string/House3"/>
        <Button
            android:id="@+id/btnHouse4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorChoise"
            android:background="@color/colorPrimary"
            android:text="@string/House4"/>
        <Button
            android:id="@+id/btnHouse5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColorChoise"
            android:background="@color/colorPrimary"
            android:text="@string/House5"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/houseFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
