<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutNha5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLeftMenu"
    android:padding="@dimen/padding_medium">
    <ImageView
        android:id="@+id/imvAvatarHouse5"
        android:layout_width="@dimen/Create_Account_Image_width"
        android:layout_height="@dimen/Create_Account_Image_height"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/marginFragment"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvHouse5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imvAvatarHouse5"
        android:text="@string/NameofHouse5"
        android:textColor="@color/TextMain"
        android:textSize="@dimen/TextSizeInfo"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tvBonMangNha5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHouse5"
        android:layout_centerHorizontal="true"
        android:text="@string/DateHouse5"
        android:textSize="@dimen/fontSize"
        android:textColor="@color/TextMain"/>
    <LinearLayout
        android:layout_below="@id/tvBonMangNha5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horixontal_margin"
        android:paddingLeft="@dimen/activity_horixontal_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/leftMenu_ChucVu"
                android:layout_height="wrap_content"
                android:text="Trưởng nhà:"/>
            <EditText
                android:id="@+id/edtNameTN5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSize"
                android:hint="@string/NameTN"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/leftMenu_ChucVu"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSize" />
            <EditText
                android:id="@+id/edtNumberTN5"
                android:layout_width="@dimen/leftMenuNumber"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/fontSize"
                android:hint="@string/Number"/>
            <ImageButton
                android:id="@+id/ibtnCallTN5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_item_height"
                android:scaleType="fitCenter"
                android:layout_gravity="end"
                android:background="@color/backgroundLeftMenu"
                android:src="@mipmap/ic_launcher_call"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/leftMenu_ChucVu"
                android:layout_height="wrap_content"
                android:text="Phó nhà:"/>
            <EditText
                android:id="@+id/edtNamePN5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSize"
                android:hint="@string/NamePN"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/leftMenu_ChucVu"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSize" />
            <EditText
                android:id="@+id/edtNumberPN5"
                android:layout_width="@dimen/leftMenuNumber"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/fontSize"
                android:hint="@string/Number"/>
            <ImageButton
                android:id="@+id/ibtnCallPN5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_item_height"
                android:scaleType="fitCenter"
                android:layout_gravity="end"
                android:background="@color/backgroundLeftMenu"
                android:src="@mipmap/ic_launcher_call"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/leftMenu_ChucVu"
                android:layout_height="wrap_content"
                android:text="Quản lí:"/>
            <EditText
                android:id="@+id/edtNameQL5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSize"
                android:hint="@string/NameQL"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/leftMenu_ChucVu"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSize" />
            <EditText
                android:id="@+id/edtNumberQL5"
                android:layout_width="@dimen/leftMenuNumber"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="@dimen/fontSize"
                android:hint="@string/Number"/>
            <ImageButton
                android:id="@+id/ibtnCallQL5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/navigation_item_height"
                android:scaleType="fitCenter"
                android:layout_gravity="end"
                android:background="@color/backgroundLeftMenu"
                android:src="@mipmap/ic_launcher_call"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>