<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.tuannguyen.text1.LoginActivity">

    <TextView
        android:id="@+id/tvManage"
        android:layout_width="@dimen/Loginwidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="QUẢN LÍ"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>
    <TextView
        android:id="@+id/tvIncomeExpense"
        android:layout_width="@dimen/Loginwidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvManage"
        android:gravity="center"
        android:padding="0dp"
        android:text="THU CHI"
        android:textSize="40sp"
        android:textColor="@color/colorText"/>
    <EditText
        android:id="@+id/edtHouse"
        android:layout_width="@dimen/Loginwidth"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvIncomeExpense"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:hint="Lưu Xá Vinh Sơn"/>
    <LinearLayout
        android:id="@+id/layoutUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edtHouse"
        android:background="@color/colorBackground"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="@dimen/Loginwidth"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="Nhập ID"
            android:textSize="@dimen/fontSize"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="@dimen/Loginwidth"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edtLogin"
            android:layout_below="@+id/edtLogin"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Login_user_pass"
            android:textSize="@dimen/fontSize"/>

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/Loginwidth"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPassword"
            android:layout_centerHorizontal="true"
            android:background="@color/colorText"
            android:padding="2dp"
            android:text="@string/login_user_Login"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutUser"
        android:layout_centerHorizontal="true"
        android:background="@color/colorBackground"
        android:text="@string/Login_register"
        android:textColor="@color/colorText" />
</RelativeLayout>
